Add doMagic buttons

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">SimpleContentProvider</string>
+    <string name="insert_rows">Insert rows</string>
+    <string name="log_rows">Log rows</string>
 </resources>
